--- a/index.html
+++ b/index.html
@@ -28,21 +28,21 @@
           </div>
         </div>
       </section>
-        <ul class="sm-item">
-          <li class="sm-list">
-            <a href="" class="sm-link"><ion-icon name="logo-facebook"></ion-icon></a>
-          </li>
-          <li class="sm-list">
-            <a href="" class="sm-link"><ion-icon name="logo-twitter"></ion-icon></a>
-          </li>
-          <li class="sm-list">
-            <a href="" class="sm-link"><ion-icon name="logo-instagram"></ion-icon></a>
-          </li>
-        </ul>
+      <ul class="sm-item">
+        <li class="sm-list">
+          <a href="" class="sm-link"><ion-icon name="logo-facebook"></ion-icon></a>
+        </li>
+        <li class="sm-list">
+          <a href="" class="sm-link"><ion-icon name="logo-twitter"></ion-icon></a>
+        </li>
+        <li class="sm-list">
+          <a href="" class="sm-link"><ion-icon name="logo-instagram"></ion-icon></a>
+        </li>
+      </ul>
     </main>
 
     <footer>
-      <p class="attribution">Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="#">kirimaru04</a>.</p>
+      <p class="attribution">Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="https://github.com/kirimaruuu/fm-huddle-landing-page" target="_blank">kirimaru04</a>.</p>
     </footer>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
